[package]
name = "biostats"
version = "0.4.3"
authors = ["Aaron Zorel"]
edition = "2018"
license = "Apache-2.0"
description = "A bioinformatics library"
repository = "https://github.com/Rustinante/biostats"

[dependencies]
biofile = "1.5.3"
clap = "2.32.0"
math = "0.8.9"
ndarray = {version = "0.12.1"}
num = "0.2"
program-flow = "0.1.3"
rayon = "1.1.0"

[dev-dependencies]
ndarray-rand = "0.9.0"
rand = "0.6.5"
tempfile = "3.1.0"
